ingress-qa.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-ingress-dev
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: my-springboot.local
    http:
      paths:
      - path: /qa(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: springboot-service
            port:
              number: 7000
