qa_combined_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-ingress
  namespace: qa
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: dev.local
    http:
      paths:
      - path: /hello
        pathType: Prefix
        backend:
          service:
            name: springboot-service
            port:
              number: 7000

  - host: qa.local
    http:
     path: /
     pathType: Prefix
     backend:
      service:
         name: wordpress
         port: 
           number: 80
